--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -209,7 +209,7 @@ jobs:
             ' all-issues.json
           )
 
-          # Enforce per-rule & per-file caps (use flatten so we never leave nested arrays)
+          # Enforce per-rule & per-file caps (already using flatten)
           TRIMMED=$(
             echo "$PRIORITIZED" \
             | jq -c --argjson maxPerRule "$MAX_ISSUES_PER_RULE" --argjson maxPerFile "$MAX_ISSUES_PER_FILE" '
@@ -221,6 +221,8 @@ jobs:
           # Apply global cap
           TRIMMED=$(echo "$TRIMMED" | jq -c --argjson maxIssues "$MAX_ISSUES" '.[0:$maxIssues]')
 
+          # Belt-and-suspenders: guarantee array-of-objects only
+          TRIMMED=$(echo "$TRIMMED" | jq -c '[ .[] | objects ]')
 
           echo "$TRIMMED" > trimmed-issues.json
           echo "After trimming: $(jq 'length' trimmed-issues.json) issues"
@@ -293,33 +295,13 @@ jobs:
           MAX_EXEMPLARS_PER_RULE=1
 
           SRC=trimmed-issues.json
-          if [ ! -s "$SRC" ]; then
-            echo "[]" > issues_compact.json
-            echo "No issues to summarize." > question_summary.txt
-            exit 0
-          fi
-
           echo "Source length: $(jq 'length' "$SRC")"
 
-          # Normalize every element to a small object (drop non-objects, drop nested arrays)
+          # Normalize: drop non-objects (if any slipped in)
           NORM=$(
-            jq -c '
-              ( if type=="array" then . else [.] end )
-              | map(
-                  if    type=="object" then .
-                  elif  type=="array"  then empty         # drop any accidental nested arrays
-                  else  empty
-                  end
-                )
-              | map({
-                  rule:      (.rule      // ""),
-                  component: (.component // ""),
-                  severity:  (.severity  // "UNKNOWN"),
-                  line:      (.line      // 0),
-                  message:   (.message   // "")
-                })
-            ' "$SRC"
+            jq -c '[ .[] | objects ]' "$SRC"
           )
+
           echo "Normalized length: $(jq 'length' <<<"$NORM")"
 
           # Filter (non-empty rule/component, optional drop tests, blocklist)
@@ -328,21 +310,14 @@ jobs:
               --argjson block "$RULE_BLOCKLIST" \
               --arg ntest "$NON_TEST_ONLY" '
                 [ .[]
-                  | select(.rule != "" and .component != "")
-                  | select( ( ($ntest=="true") | not ) or ( (.component | test("^src/test/") | not) ) )
-                  | select( ($block | index(.rule)) == null )
+                  | select((.rule // "") != "" and (.component // "") != "")
+                  | select( ( ($ntest=="true") | not ) or ( ((.component // "") | test("^src/test/") | not) ) )
+                  | select( ($block | index((.rule // ""))) == null )
                 ]
               ' <<<"$NORM"
           )
-          echo "Filtered length: $(jq 'length' <<<"$FILTERED")"
 
-          if [ "$(jq 'length' <<<"$FILTERED")" -eq 0 ]; then
-            echo "[]" > issues_compact.json
-            echo "No eligible issues after filtering." > question_summary.txt
-            exit 0
-          fi
-
-          # Sort & cap
+          # Sort & cap (same as you had)
           SORTED=$(
             jq -c '
               def rank:
@@ -350,7 +325,7 @@ jobs:
                 elif .severity=="CRITICAL" then 2
                 elif .severity=="MAJOR" then 1
                 else 0 end;
-              sort_by([ - (rank), .rule, .component, (.line // 0) ])
+              sort_by([ - (rank), (.rule // ""), (.component // ""), (.line // 0) ])
             ' <<<"$FILTERED"
           )
 
@@ -364,10 +339,11 @@ jobs:
             | jq -c --argjson m "$MAX_TOTAL_ISSUES" '.[0:$m]'
           )
 
-          echo "$CAPPED" > issues_compact.json
+          # Force array-of-objects again before summary (final guard)
+          echo "$CAPPED" | jq -c '[ .[] | objects ]' > issues_compact.json
           echo "Compact issue count: $(jq 'length' issues_compact.json)"
 
-          # Tiny per-rule summary
+          # Tiny per-rule summary (now safe)
           jq -r --argjson k "$MAX_EXEMPLARS_PER_RULE" '
             group_by(.rule)
             | map({
@@ -381,8 +357,6 @@ jobs:
             | .[]
           ' issues_compact.json > question_summary.txt
 
-          echo "Summary preview:"
-          head -n 10 question_summary.txt || true
 
 
       - name: Send issues to Technical Debt Analyzer (compact + robust)
